# tree-sitter-blade

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-blade.pc.in
bindings/go/: binding_test.go
bindings/python/tree_sitter_blade/: __init__.py
bindings/rust/: lib.rs
